# goocanvas

./: .gitignore  .gitlab-ci.yml  ChangeLog  configure.ac  goocanvas.doap  meson.build  meson_options.txt
bindings/python/: meson.build
demo/: Makefile.am  generic-position-demo.c  meson.build  mv-radii-demo.c  radii-demo.c
docs/: meson.build
docs/xml/: meson.build
po/: LINGUAS  meson.build  ro.po  sl.po  zh_CN.po
src/: Makefile.am  goocanvas.c  goocanvas.h  goocanvasatk.c  goocanvasatk.h  goocanvasellipse.h  goocanvasenumtypes.c.template  goocanvasenumtypes.h.template  goocanvasexports.h  goocanvasgrid.h  goocanvasgroup.h  goocanvasimage.h  goocanvasitem.h  goocanvasitemmodel.h  goocanvasitemsimple.h  goocanvaspath.h  goocanvaspolyline.h  goocanvasrect.h  goocanvasstyle.h  goocanvastable.h  goocanvastext.h  goocanvasutils.h  goocanvaswidget.h  meson.build
